# tribal-knowledge

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  .env.test  Dockerfile  fly.toml  pyproject.toml
backend/app/: auth.py  database.py  locking.py  main.py  schemas.py  scoring.py  survivor_import.py  tribe_import.py
backend/app/routers/: advantage_plays.py  contestants.py  eliminations.py  episodes.py  finale_predictions.py  league_settings.py  me.py  picks.py  roster.py  rules.py  scoring_events.py  seasons.py  standings.py  survivor_import.py  tokens.py  tribes.py  tvmaze.py  winner_picks.py
backend/scripts/: import_episode.py  load_headshots.py  run_bots.py  use_nicknames.py
backend/tests/: conftest.py  helpers.py  test_admin.py  test_advantage_plays.py  test_app.py  test_auth.py  test_cast_sort.py  test_contestant_performance.py  test_episode_lifecycle.py  test_episodes.py  test_finale_predictions.py  test_friday_entry.py  test_import_proposal.py  test_join.py  test_me.py  test_picks.py  test_roster.py  test_rules.py  test_scoring.py  test_seasons.py  test_sole_survivor.py  test_standings.py  test_survivor_import.py  test_tokens.py  test_tvmaze.py  test_winner_picks.py
design/: bot-personas.md
design/icon-concepts/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20260523000000_initial_schema.sql  20260803000000_tribes.sql  (+29 more)
(+35 files in other folders)
