[project]
name = "tribal-knowledge-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary",
    "python-dotenv",
    "pyjwt[crypto]",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "httpx",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running local Supabase instance (supabase start)",
]
